--- a/mitsubishi_rv7f_gazebo/package.xml
+++ b/mitsubishi_rv7f_gazebo/package.xml
@@ -12,5 +12,5 @@
   <run_depend>ros_control</run_depend>
   <run_depend>gazebo_ros_control</run_depend>
   <run_depend>gazebo_ros</run_depend>
-  <run_depend>nachi_control</run_depend>
+  <run_depend>mitsubishi_rv7f_control</run_depend>
 </package>
